# ainsight

./: .gitignore  README.md  install_readme.md
docs/: run-log.md
market/: .env.example  main.py  pyproject.toml
market/market/: __init__.py  config.py
market/market/jobs/: __init__.py  calc_features.py  fetch_daily.py  sync_financials.py  sync_reports.py
market/market/services/: __init__.py  db.py  llm.py  storage.py  tushare_client.py
