[tool.uv]
index-url="https://mirrors.aliyun.com/pypi/simple/"
[project]
name = "market"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow[celery]==3.0.0",
    "httpx>=0.27.0",
    "jieba>=0.42.1",
    "oss2>=2.19.1",
    "pandas>=2.3.3",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=1.4.54",
    "tushare>=1.4.24",
]
